todo-project/manifests/Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: todo
  template:
    metadata:
      labels:
        app: todo
    spec:
      containers:
      - name: todo-app
        image: todo-app
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
        resources:
          limits:
            cpu: "10m"
            memory: "20Mi"
        volumeMounts:
          - name: persistent
            mountPath: /usr/src/shared/files
      - name: todo-backend
        image: todo-backend
        imagePullPolicy: Always
        readinessProbe:
          initialDelaySeconds: 10
          periodSeconds: 5
          httpGet:
            port: 3451
            path: "/healthz"
        ports:
        - containerPort: 8081
        resources:
          limits:
            cpu: "10m"
            memory: "20Mi"
      - name: todo-broadcaster
        image: todo-broadcaster
        imagePullPolicy: Always
      volumes:
      - name: persistent
        persistentVolumeClaim:
          claimName: todo-pvc
