todo-project/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: todo-ingress
spec:
  rules:
  - http:
      paths:
      - path: /home
        pathType: Prefix
        backend:
          service:
            name: todo-frontend
            port:
              number: 8080
      - path: /todos
        pathType: Prefix
        backend:
          service:
            name: todo-backend
            port:
              number: 8081
